# pruebas_unitarias_gtest

./: README.md
pruebas_unitarias_GTest/: pruebas_unitarias_GTest.sln
pruebas_unitarias_GTest/pruebas_unitarias_GTest/: pruebas_unitarias_GTest.cpp  pruebas_unitarias_GTest.vcxproj  pruebas_unitarias_GTest.vcxproj.filters
pruebas_unitarias_GTest/pruebas_unitarias_GTest/Debug/: pruebas_unitarias_GTest.exe.recipe  pruebas_unitarias_GTest.ilk  vc142.idb
pruebas_unitarias_GTest/pruebas_unitarias_GTest/Debug/pruebas_.877c11f1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pruebas_unitarias_GTest.lastbuildstate  pruebas_unitarias_GTest.write.1u.tlog
started_with_GTests/: CMakeLists.txt
started_with_GTests/started_with_GTests/: CMakeLists.txt  started_with_GTests.cpp  whattotest.cpp
